# microHTTP

./: .gitignore  README.md  env.template.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-package.yaml
commands/: flash
common/: utils.py
communication/: request.py  response.py
microHTTP/: __init__.py  micro_http_client.py
microHTTP/common/: consts.py  typing.py  utils.py
microHTTP/communication/: request.py
